<resources>
    <string name="app_name">Scrabble-computer-vision</string>
    <string name="picture_button">Scan</string>
    <string name="title_activity_picture">PictureActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="picture_confirm">Confirm Letters</string>
    <string name="generate_button">Generate Words</string>
    <string name="scanned_title">Scanned Letters</string>
    <string name="retake_button">Retake Photo</string>
    <string name="change_letters">Change Letters</string>
    <string name="done_button">Done</string>
    <string name="words_title">Word List</string>

    <string name="capture_button">Capture Image</string>
</resources>