<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5F399A"
            android:padding="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="20dp"
            android:text="@string/words_title"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_surface"
            android:textSize="34sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wordsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:background="@color/white"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/change_let_button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:onClick="changeLetters"
            android:text="@string/change_letters" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:onClick="done"
            android:text="@string/done_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>